@@ -1,3 +1,6 @@
+05/14/05
+- do not center the editor window at creation (Tiger compatibility)
+
 05/13/05
 - debugger location is now centered
 - debugger input text displays now tokens if they are available (i.e. after a rewind)
